--- a/EECIP/Views/Dashboard/Metrics.cshtml
+++ b/EECIP/Views/Dashboard/Metrics.cshtml
@@ -196,6 +196,11 @@
                                 }]
                             },
                             options: {
+                                elements: {
+                                    line: {
+                                        tension: 0
+                                    }
+                                },
                                 title: {
                                     display: true,
                                     text: 'How recently projects were updated on a month-by-month basis'
