--- a/EECIP/Views/Dashboard/Projects.cshtml
+++ b/EECIP/Views/Dashboard/Projects.cshtml
@@ -28,7 +28,7 @@
     }
 </div>
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-xs-12">
         <section class="panel panel-default">
             <div class="panel-heading">
                 Projects
@@ -39,7 +39,7 @@
             </div>
             <div class="panel-body">
                 <div class="table-responsive" style="max-height:700px;">
-                    <table class="table table-striped m-b-none" data-ride="datatables">
+                    <table class="table table-hover table-striped m-b-none" data-ride="datatables">
                         <tr>
                             <th></th>
                             @if (!User.IsInRole("ReadOnly"))
