--- a/EECIP/Views/Shared/_Layout.cshtml
+++ b/EECIP/Views/Shared/_Layout.cshtml
@@ -166,10 +166,10 @@
             <a href="@Url.Action("TermsAndConditions","Home")">Terms & Conditions </a>
         </div>
         <div class=" footer-items footer-right">
-            <a href="https://e-enterprisefortheenvironment.net/our-projects/inventory/" target="_blank">Contact </a> |
+            <a href="https://e-enterprisefortheenvironment.net/wp-content/uploads/2018/10/EECIP-FAQ-for-Site-Users_092018.pdf" target="_blank">FAQ</a> |
         </div>
         <div class=" footer-items footer-right">
-            <a href="https://e-enterprisefortheenvironment.net/our-projects/inventory/" target="_blank">About</a> |
+            <a href="https://e-enterprisefortheenvironment.net/our-projects/inventory/" target="_blank">About/Contact </a> |
         </div>
     </div>
     <!-- end: FOOTER -->
