--- a/EECIP/Views/Dashboard/Leaderboard.cshtml
+++ b/EECIP/Views/Dashboard/Leaderboard.cshtml
@@ -10,9 +10,12 @@
 <div class="row">
     <div class="col-md-12">
         <section class="panel panel-default ">
-            @*<div class="panel-heading">
-                Most Active Users
-            </div>*@
+            @if (@Request.Params["startDt"] != null)
+            {
+            <div class="panel-heading">
+                Most Points between @Request.Params["startDt"] (UTC) and @Request.Params["endDt"] (UTC)
+            </div>
+            }
             <div class="table-responsive">
                 <table class="table table-striped m-b-none" data-ride="datatables">
                     <tr>
