Added more data export options

--- a/EECIP/Views/Admin/ExportData.cshtml
+++ b/EECIP/Views/Admin/ExportData.cshtml
@@ -23,6 +23,18 @@
                             <div class="form-group">
                                 <table>
                                     <tr>
+                                        <td style="padding:5px;">Users</td>
+                                        <td style="padding:5px;">
+                                            <input type="checkbox" name="exportdata" value="Users" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding:5px;">Agencies</td>
+                                        <td style="padding:5px;">
+                                            <input type="checkbox" name="exportdata" value="Agencies" />
+                                        </td>
+                                    </tr>
+                                    <tr>
                                         <td style="padding:5px;">Projects</td>
                                         <td style="padding:5px;">
                                             <input type="checkbox" name="exportdata" value="Projects" />
@@ -34,6 +46,13 @@
                                             <input type="checkbox" name="exportdata" value="Services" />
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td style="padding:5px;">Search</td>
+                                        <td style="padding:5px;">
+                                            <input type="checkbox" name="exportdata" value="Search" />
+                                        </td>
+                                    </tr>
+
                                 </table>
                             </div>
                             <button type="submit" class="btn btn-primary">Export Data</button>
