--- a/EECIP/Views/Forum/ShowTopic.cshtml
+++ b/EECIP/Views/Forum/ShowTopic.cshtml
@@ -60,7 +60,7 @@
                             </span>
                         </li>
                     }
-                    <li><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> @Model.Views Views</li>
+                    <li><span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span> @Model.Topic.Views Views</li>
                     <li><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> Last Post @Model.LastPostDatePretty</li>
 
                     @if (Model.Topic.Solved)
